--- a/testes.html
+++ b/testes.html
@@ -6,5 +6,29 @@
     </head>
     <body>
 <h1> Site de testes</h1>
+
+
+
+
+
+<div class="table reponsive">
+
+<table class="table ">
+<form>
+    <div>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+      </div>
+      <div><input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"></div>
+      <div><input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Check me out</label></div>
+      <td>
+        <center><button type="submit">Submit</button></center>
+      </td>
+  </form>
+</table>
+
+</div>
+
+
     </body>
 </html>
