parado pela questão de css defeituoso

--- a/testes.html
+++ b/testes.html
@@ -11,9 +11,8 @@
 
 
 
-<div class="table reponsive">
 
-<table class="table ">
+
 <form>
     <div>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
@@ -22,12 +21,11 @@
       <div><input type="checkbox" class="form-check-input" id="exampleCheck1">
       <label class="form-check-label" for="exampleCheck1">Check me out</label></div>
       <td>
-        <center><button type="submit">Submit</button></center>
+        <button type="submit">Submit</button>
       </td>
   </form>
-</table>
 
-</div>
+
 
 
     </body>
