--- a/testes.html
+++ b/testes.html
@@ -5,24 +5,22 @@
 <script type="text/javascript" src="testes.js"></script>
     </head>
     <body>
-<h1> Site de testes</h1>
-
-
-
-
-
-
+<h1> Teste de login</h1>
 
 <form>
     <div>
+      <br>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
-      </div>
-      <div><input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"></div>
-      <div><input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label></div>
-      <td>
-        <button type="submit">Submit</button>
-      </td>
+     <br>
+     <br>
+     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+     <br>
+     <input type="checkbox" class="form-check-input" id="exampleCheck1">
+     <label class="form-check-label" for="exampleCheck1">Check me out</label>
+       <br>
+       <br>
+     <button type="submit">Submit</button>
+    </div>
   </form>
 
 
