--- a/teladelogin.html
+++ b/teladelogin.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="testes.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="teladelogin.css" media="screen" />
 <script type="text/javascript" src="testes.js"></script>
     </head>
     <body>
