--- a/teladelogin.html
+++ b/teladelogin.html
@@ -10,10 +10,10 @@
 <form>
     <div>
       <br>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+      <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Email">
      <br>
      <br>
-     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+     <input type="password" class="form-control" id="InputPassword1" placeholder="Password">
      <br>
      <input type="checkbox" class="form-check-input" id="exampleCheck1">
      <label class="form-check-label" for="exampleCheck1">Check me out</label>
